auge_server_grpc_web/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 8440 }
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match: { prefix: "/" }
                      route:
                        cluster: auge_service
                        max_grpc_timeout: 30s
                    cors:
                      allow_origin: ["http://127.0.0.1:8083"]
                      #- "https://127.0.0.1:8083"
                      #- "https://127.0.0.1:8443"
                      #- "http://127.0.0.1:8083"
                      #- "https://auge.levius.com.br"
                      #- "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
                      enabled: true
              http_filters:
                - name: envoy.grpc_web
                - name: envoy.cors
                - name: envoy.router
  - name: listener_https
    address:
      socket_address: { address: 0.0.0.0, port_value: 8443 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: auge_service
                  max_grpc_timeout: 30s
              cors:
                allow_origin: ["https://auge.levius.com.br"]
                #- "https://127.0.0.1:8083"
                #- "https://127.0.0.1:8443"
                #- "http://127.0.0.1:8083"
                #- "https://auge.levius.com.br"
                #- "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
                enabled: true
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/auge_server/certificate/cert.pem"
              private_key:
                filename: "/etc/auge_server/certificate/privkey.pem"
  clusters:
  - name: auge_service
    connect_timeout: 30s
    type: logical_dns
    http2_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive:
        keepalive_time: 300
    lb_policy: round_robin
    hosts: [{ socket_address: { address: auge-server, port_value: 9091 }}]
